RESOLVED FIXED313280
[Site Isolation] https/wpt/resource-timing/crossorigin-servertiming.html fails
https://bugs.webkit.org/show_bug.cgi?id=313280
Summary [Site Isolation] https/wpt/resource-timing/crossorigin-servertiming.html fails
ccarley2
Reported 2026-04-24 17:35:14 PDT
https/wpt/resource-timing/crossorigin-servertiming.html is failing
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-24 17:35:21 PDT
ccarley2
Comment 2 2026-04-24 17:54:23 PDT
EWS
Comment 3 2026-04-28 20:08:58 PDT
Committed 312257@main (5d5abab4e3bf): <https://commits.webkit.org/312257@main> Reviewed commits have been landed. Closing PR #63564 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.